css/styles.css
@import url("css/mq.css");

/********* VARIABLES ***********/

:root {
    --primary-blue: #1b79a8;
    --dark-gray: #45454b;
    --accent-navy: navy; 
    --white: #fff;


}

/********* BASIC STYLES ***********/

body {
    margin: 0 auto;
    width: 100%;
    padding: 0;
    font-family: 'Josefin Sans', sans-serif;
    background-color: #fff;
    color: var(--dark-gray);
}

a {
    text-decoration: none;
}

.page-title {
    margin: 1em 1em;
}

.subtitle {
    margin: 1em 1em;
}

.content-wrapper {
    width: 80%;
    margin: 0 auto;
}

.help-content-wrapper {
    width: 90%;
    margin: 0 auto;
    font-size: 1.2em;
    line-height: 1.4em;
}


/**** INDEX PAGE STYLING  ****/ 

.main-grid {
    display: block;
    text-align: center;
    margin: 1em;
    font-size: 1.4em;
}

.bus-list ul {
    list-style: none;
}

.item {
    padding: 1em 0;
}

.item-img img{
    border-radius: 50%;
}


/********* FORM STYLES **********/

.section-title {
    padding-top: 1rem;
};

.first-row {
    padding-top: 2rem;
}

.lower-row {
    padding-top: 0.8rem;
}

/********* COMPONENTS ***********/
button {
    background-color: var(--primary-blue);
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}

input,
textarea {
    padding: 0.5em;
    width: 100%;
}


/********* NAVBAR STYLING ***********/
.main-nav {
    width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
}

.nav-list {
    list-style-type: none;
    background-color: #1b79a8;
    display: block;
    justify-content: space-between;
    margin: 0 auto;
}

.nav-list ul {
    display: block;
}

.nav-list li a {
    color: #fff;
    text-align: center;
    align-items: center;
    padding: 0.5em 1em 0.5em 0.5em;
    text-decoration: none;
    font-size: 1.5em;
    display: block;
    width: 100%;
    margin-left: -1em;
}

.logo {
    display: none;
}


/********* PET DISPLAY PAGE STYLING ***********/

.pet-display-page-wrapper {
    width: 80%;
    margin: 0 auto;
    padding-top: 1em;
    display: block; 
    line-height: 1.5em;
}

.pet-display-page-wrapper h1 {
    text-align: center;
}

.pet-display-page-wrapper > p {
    font-size: 1.2em;
}

#firstRow {  /* Starting container for pet display page */ 
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: space-between;
}

.pet-image-div {
    height: 200px;
    align-content: center;
}

#firstRow > div {  /* pet card Div */
    display: flex;
    height: auto;
    flex-flow: column nowrap;
    align-content: space-around;
    flex: 1 1 50%;
    text-align: center;
    padding: 0.5em;
    background-color: #f4eade;
    margin: 0.5em;
    padding-top: 1em;
    border-radius: 5%;
    line-height: 1.5;
}

.pet-name {
    padding-top: 1em;
    text-align: center;
}

#idNo {
    color: gray;
}

.pet-image {
    max-width: 300px;
    height: 100%;
    margin-top: 0.5em;
    box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
}

.pet-name {
    margin-top: 1em;
}

.pet-data {
    width: 80%;
    text-align: left;
    margin: 1em; 
}

.pet-button a {
    color: white;
    text-decoration: none;
}


/**********  LIGHTBOX ON PET PAGE **********/

.black_overlay{
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-color: black;
	z-index:1001;
	-moz-opacity: 0.8;
	opacity:.80;
    filter: alpha(opacity=80);
    overflow: hidden;
}

.white_content {
	display: none;
	position: fixed;
	top: 5%;
	left: 5%;
	width: 90%;
	height: 90%;
	padding: 16px;
	border: 16px solid var(--dark-gray);
	background-color: white;
	z-index: 1002;
	overflow-x: scroll;
}

.lb-img-div {
    margin: 0.5em 1em;
    height: auto;
    justify-content: center;
    display: inline-block;
    padding-bottom: 2em;
}

.lb-img {
    height: 300px;
    display: inline-block;
    padding: 0.5em;
    margin-top: 0.5em;
}

.lb-img img {
    height: 300px;
}

.lb-desc {
    font-size: 1.15em;
    padding-top: 1em;
}

/* ADOPTION APPLICATION STYLING */

/* CONTACT PAGE STYLING */

.contact-content-wrapper {
    width: 90%;
    margin: 0 auto;
}

.contact-grid {
    display: grid;
    justify-items: left;
}

.contact-title {
    grid-area: title;
    justify-self: center;    
}

.contact-phone-icon {
    grid-area: phone-icon;
    justify-self: right;
    padding-right: 2em;
}

.contact-address-icon {
    grid-area: address-icon;
    justify-self: right;
    padding-right: 2em;
}

.contact-fax-icon {
    grid-area: fax-icon;
    justify-self: right;
    padding-right: 2em;
}

.contact-address-info,
.contact-fax-info,
.contact-phone-info {
    font-size: 20px;
}

.contact-phone-info {
    grid-area: phone-info;
    justify-self: left;
}

.contact-address-info {
    grid-area: address-info;
    justify-self: left;
}

.contact-fax-info {
    grid-area: fax-info;
    justify-self: left;
}

.message-box {
    grid-area: message;
    width: 100%;
}

.map-div {
    grid-area: map;
    justify-self: center;
    align-self: center;
    padding: 1em;
}

.contact-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
    grid-template-areas: 
        "title title title"
        "address-icon address-info address-info"
        "phone-icon phone-info phone-info"
        "fax-icon fax-info fax-info"
        "message message message"
        "map map map";
    justify-items: left;
}

.info {
    font-size: 28px;
}

.message-box {
    margin-top: 1em;
}

#map-sm {
    display: block;
    margin: 1em 0;
    justify-content: center;
}

#map-md {
    display: none;
    justify-content: center;
    margin: 1em 0;
}

#map-lg {
    display: none;
    justify-content: center;
    margin: 1em 0;
}

/************************** ABOUT PAGE STYLING *************************/

/* Question panels on accordion */
.about-heading {
    font-size: 1.2em;
    color: var(--dark-gray);
    margin: 1em 0;
}

.about-text {
    font-size: 1em;
}

.accordion-div {
    margin-top: 3em;
}

.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
    font-size: 1em;
}

/* Bkgd color for question panel w/hover or active */
.acc-active, .accordion:hover {
    background-color: #ccc;
}

/* Hidden panel below question heading */
.panel {
    padding: 0 18px;
    background-color: white;
    display: none;
    overflow: hidden;
}

/* FOOTER */

footer {
    width: 100%;
    margin: 0 auto;
    padding: 1.2em 0;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
}

.soc-icons {
    flex-basis: 0 1 auto;
}

/* ALL soc icon styling */
.fa {
    margin: 1em 0.5em;
    padding: 10px;
    font-size: 15px;
    width: 25px;
    text-align: center;
    text-decoration: none;
}

/* Soc Icon hover effect */
.fa:hover {
    opacity: 0.7;
}

.fa-facebook {
    background: #3B5998;
    color: white;
}

.fa-twitter {
    background: #55ACEE;
    color: white;
}
  
  .fa-youtube {
    background: #bb0000;
    color: white;
}
  
  .fa-instagram {
    background: #125688;
    color: white;
}
  
  .fa-pinterest {
    background: #cb2027;
    color: white;}
  

